force-app/main/default/objects/Contact/fields/Left_company__c.field-meta.xml
<CustomField>
    <fullName>Left_company__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Left company</label>
    <type>Checkbox</type>
</CustomField>