force-app/main/default/objects/Contact/fields/LOB__c.field-meta.xml
<CustomField>
    <fullName>LOB__c</fullName>
    <label>LOB</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aviation</fullName>
            </value>
            <value>
                <fullName>Bitumen</fullName>
            </value>
            <value>
                <fullName>Commercial Fuels</fullName>
            </value>
            <value>
                <fullName>LPG</fullName>
            </value>
            <value>
                <fullName>Marine</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>