force-app/main/default/objects/Contact/fields/TCP_Deletion_Request__c.field-meta.xml
<CustomField>
    <fullName>TCP_Deletion_Request__c</fullName>
    <description>Used in backend for My Company Users deletion</description>
    <label>Deletion Request</label>
    <length>144</length>
    <type>Text</type>
</CustomField>