force-app/main/default/objects/Contact/fields/TCP_Products__c.field-meta.xml
<CustomField>
    <fullName>TCP_Products__c</fullName>
    <inlineHelpText>To select products for CommOps user</inlineHelpText>
    <label>TCP Products</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Glycol</fullName>
            </value>
            <value>
                <fullName>styrene</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>