force-app/main/default/objects/Contact/fields/TCP_TandC__c.field-meta.xml
<CustomField>
    <fullName>TCP_TandC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TCP TandC</label>
    <type>Checkbox</type>
</CustomField>