force-app/main/default/objects/Contact/fields/TCP_TandC_Accepted_Date__c.field-meta.xml
<CustomField>
    <fullName>TCP_TandC_Accepted_Date__c</fullName>
    <label>TCP TandC Accepted Date</label>
    <type>Date</type>
</CustomField>