force-app/main/default/objects/Contact/fields/TCP_User_Clicked__c.field-meta.xml
<CustomField>
    <fullName>TCP_User_Clicked__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User Clicked</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contacts1</relationshipName>
    <type>Lookup</type>
</CustomField>