force-app/main/default/objects/Contact/fields/Yahoo_ID__c.field-meta.xml
<CustomField>
    <fullName>Yahoo_ID__c</fullName>
    <label>Yahoo ID</label>
    <length>32</length>
    <type>Text</type>
</CustomField>