force-app/main/default/objects/Contact/listViews/All_Contacts_MY.listView-meta.xml
<ListView>
    <fullName>All_Contacts_MY</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All Contacts</label>
    <sharedTo>
        <territory>Revolution_Territory.Malaysia</territory>
    </sharedTo>
</ListView>