force-app/main/default/objects/Contact/listViews/All_Contacts_QA.listView-meta.xml
<ListView>
    <fullName>All_Contacts_QA</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.EMAIL</field>
        <operation>equals</operation>
        <value>pavan-kumar.choppa@shell.com</value>
    </filters>
    <label>All Contacts</label>
</ListView>