force-app/main/default/objects/Contact/listViews/Copy_of_All_Contacts_SOM.listView-meta.xml
<ListView>
    <fullName>Copy_of_All_Contacts_SOM</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.LAST_NAME</columns>
    <columns>CONTACT.FIRST_NAME</columns>
    <columns>CONTACT.SALUTATION</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Account.Customer_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account.Customer_Type__c</field>
        <operation>equals</operation>
        <value>Sold To</value>
    </filters>
    <filters>
        <field>CONTACT.PHONE1</field>
        <operation>notContain</operation>
    </filters>
    <label>Copy of All Contacts (SOM)</label>
</ListView>