force-app/main/default/objects/Contact/listViews/PFEcontact.listView-meta.xml
<ListView>
    <fullName>PFEcontact</fullName>
    <columns>CONTACT.TITLE</columns>
    <columns>Relationship__c</columns>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Yahoo_ID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.TITLE</field>
        <operation>contains</operation>
        <value>PFE</value>
    </filters>
    <label>PFE contact</label>
    <sharedTo>
        <role>B2BLead</role>
        <role>B2BPhysicalguest</role>
        <role>GCPRMPhysical</role>
    </sharedTo>
</ListView>